syntax = "proto3";

package common;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/common";

import "common/common.proto";
import "common/payment_plan.proto";

// PaymentTask encapsulates the payment goals a user has per credit account
message PaymentTask {
  string payment_task_id = 1;
  string user_id = 2;
  string account_id = 4;
  double amount = 5;
}

// Response for CreatePaymentPlan
message PaymentPlanResponse {
  repeated common.PaymentPlan payment_plans = 1;
}

// Request for UpdatePaymentPlanPlan
message UpdatePaymentPlanPlanRequest {
  repeated common.PaymentPlan payment_plans = 1;
  MetaData meta_data =2;
}

// MetaData is any preferences a user may have regarding how a payment task should be incorporated into a Payment Plan
message MetaData {
  common.PlanType preferred_plan_type = 1;
  double preferred_timeline_in_months = 2;
  common.PaymentFrequency preferred_payment_freq = 3;
}